force-app/main/default/objects/Programmatic_Revenue_Landing__c/Programmatic_Revenue_Landing__c.object-meta.xml
<CustomObject>
    <label>Programmatic Revenue Landing</label>
    <nameField>
        <label>Programmatic Revenue Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programmatic Revenue Landing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>