force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Campaign_Id__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Id__c</fullName>
    <externalId>true</externalId>
    <label>Campaign Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>