force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Programmatic Guaranteed</fullName>
            </value>
            <value>
                <fullName>Programmatic PMP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>