force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Deal_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type_Formula__c</fullName>
    <formula>IF( TEXT( Deal_Type__c )=&apos;programmatic_guarantee&apos;,&apos;Programmatic Guaranteed&apos;,&apos;Programmatic PMP&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Type Formula</label>
    <type>Text</type>
</CustomField>