force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Demand_Partner_Id__c.field-meta.xml
<CustomField>
    <fullName>Demand_Partner_Id__c</fullName>
    <label>Demand Partner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>