force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Memo_Line_External_IDs__c.field-meta.xml
<CustomField>
    <fullName>Memo_Line_External_IDs__c</fullName>
    <label>Memo Line/External IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>