force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Net_Term__c.field-meta.xml
<CustomField>
    <fullName>Net_Term__c</fullName>
    <label>Net Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>