force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Netsuite_Customer__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Customer__c</fullName>
    <label>Netsuite Customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>