force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Pmp_Type__c.field-meta.xml
<CustomField>
    <fullName>Pmp_Type__c</fullName>
    <label>Pmp Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Platform PMP</fullName>
            </value>
            <value>
                <fullName>LG Sales PMP</fullName>
            </value>
            <value>
                <fullName>Programmatic - Others</fullName>
            </value>
            <value>
                <fullName>Partner PMP</fullName>
            </value>
            <value>
                <fullName>LG Sales PMP - Non CTV Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>