force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>