force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Revenue_Cost__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Cost__c</fullName>
    <label>Revenue/Cost</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>