force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>To be Processed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Successful</fullName>
                <isActive>false</isActive>
                <label>Successful</label>
            </value>
            <value>
                <fullName>To Process</fullName>
                <isActive>false</isActive>
                <label>To Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>