force-app/main/default/objects/Programmatic_Revenue_Landing__c/fields/Time_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Time_Bucket__c</fullName>
    <label>Time Bucket</label>
    <type>DateTime</type>
</CustomField>